# breathalyzer

./: .gitignore  README.md  build.bat  deploy.bat  dspflow.md  project.md  release.bat
vst3/: CMakeLists.txt  breathalyzer.uidesc
vst3/src/: BreathalyzerController.cpp  BreathalyzerController.h  BreathalyzerDefaults.h  BreathalyzerIDs.h  BreathalyzerPluginFactory.cpp  BreathalyzerProcessor.cpp  BreathalyzerProcessor.h
vst3/src/WeCore/: SongbirdAEFilter.h
vst3/src/WeCore/General/: CoreMath.h  ParameterDefinition.h
vst3/src/WeCore/SongbirdFilters/: Formant.h  SongbirdFormantFilter.h
vst3/src/WeCore/WEFilters/: TPTSVFilter.h  TPTSVFilterParameters.h
vst3/src/dasiydsp/: FormantVoice.cpp  FormantVoice.h  adsr.cpp  adsr.h  dsp.h  formantosc.cpp  formantosc.h
vst3/src/dsp/: BreathalyzerSynth.h  growlfx.h
